<resources>
    <string name="app_name">xBeaconPlus</string>
    <string name="Broadcast_Status">Broadcast Status</string>
    <string name="UUID">UUID:</string>
    <string name="Major">Major</string>
    <string name="Minor">Minor</string>
    <string name="Interval">Interval</string>
    <string name="TxPower">TxPower</string>
    <string name="Interval_hint">Range: 100~10000</string>
    <string name="minor_hint">Range: 0~65535</string>
    <string name="uuid_hint">Length must be 36</string>
    <string name="TxPower_hint">Range: -127~127</string>
    <string name="NamespaceId_hint">Length must be 20</string>
    <string name="InstanceId_hint">Length must be 12</string>
    <string name="URL_hint">Maximum length is 16</string>
    <string name="rssi_hint">RSSI reference value at 1 meter</string>
    <string name="rssi_hint_1">-127 ~ 20</string>
    <string name="SlowBroadcast_interval">Slow Broadcast Interval (ms)</string>
    <string name="SlowBroadcast_interval_hint">0 Or 100~10000</string>
    <string name="static_time">Static Time (min)</string>
    <string name="static_time_hint">Greater than 1</string>
    <string name="Update_Password">Update Password</string>
    <string name="RSSI_tip_Content">RSSI reference value at 1 meter, range -127 to 20</string>
    <string name="SlowBroadcast_interval_hint_Content">Slow broadcast interval. 0 means off, 100~10000 means on</string>
    <string name="Static_Time_hint_Content">Time to enter slow broadcast after being static, must be greater than 1 (minutes)</string>
    <string name="config_uuid_tip">Example: 955A1523-0FE2-F5AA-A094-84B8D4F3E8AD</string>
    <string name="config_txPower_tip">4,0,-4,-8,-12,-16,-20,-40</string>
    <string name="config_txPower_tip2">4,0,-4,-8,-12,-16</string>
    <string name="Interval_ms">Interval (ms)</string>
    <string name="Power_db">Power (db)</string>
    <string name="Detect_Interval">Detect Interval</string>
    <string name="detect_interval_hint">2~255</string>
    <string name="Detect_Interval_s">Detect Interval (s)</string>
    <string name="Detect_Window_ms">Detect Window (ms)</string>
    <string name="detect_window_hint">100~1000</string>
    <string name="Detect_Threshold">Detect Threshold</string>
    <string name="detect_threshold_hint">0~65535</string>
    <string name="Light_Detect_Threshold">Light Detect Threshold</string>
    <string name="detect_threshold_light_hint">0~255</string>
    <string name="Battery">Battery</string>
    <string name="Modify_Password">Modify Password</string>
    <string name="Reset_Device">Reset Device</string>
    <string name="OTA">OTA Update</string>
    <string name="ABOUT">About</string>
    <string name="About_Us">About Us</string>
    <string name="config">Configuration</string>
    <string name="gap">Gap</string>
    <string name="tx_power">Tx-Power</string>
    <string name="mrssi">MRSSI</string>
    <string name="cancel">Cancel</string>
    <string name="sure">OK</string>
    <string name="config_uuid">Configure UUID</string>
    <string name="uuid_format_error">Please enter a valid UUID</string>
    <string name="config_major">Configure Major</string>
    <string name="input_error_tip_normal">Please enter valid information</string>
    <string name="config_minor">Configure Minor</string>
    <string name="config_sleep_time">Configure Sleep Time</string>
    <string name="config_gap">Configure Bluetooth Broadcast Interval</string>
    <string name="config_power">Configure Bluetooth Broadcast Power</string>
    <string name="config_m_rssi">Configure Bluetooth 1-meter Signal Value</string>
    <string name="config_slow_gap">Configure Slow Broadcast Interval</string>
    <string name="permission_dialog_title">Required Permissions</string>
    <string name="permission_dialog_message">If you deny the necessary permissions, the app will not function properly</string>
    <string name="permission_dialog_error">Theapp lacks the necessary permissions, which will cause the app to not function properly. Please go to Settings -> Permissions to make the necessary changes.</string>
    <string name="gps_off">GPS Required</string>
    <string name="gps_tip">Please enable GPS to use Bluetooth scanning. Otherwise, devices cannot be detected.</string>
    <string name="go_on">Continue</string>
    <string name="setting_title">Settings</string>
    <string name="tip_hint_psd">Please enter a 6-digit password</string>
    <string name="tip_hint_uuid">Please enter a 36-digit UUID</string>
    <string name="psd_filter_input_error">Please enter your private password, e.g., 123456</string>
    <string name="config_success">Configuration Successful</string>
    <string name="config_fail">Configuration Failed</string>
    <string name="connecting">Connecting...</string>
    <string name="connecttimeout">Connection Timeout</string>
    <string name="dev_scan">Device Scan</string>
    <string name="dev_config">Device Configuration</string>
    <string name="connect">Connect</string>
    <string name="still">Still</string>
    <string name="fall">Leave</string>
    <string name="move">Movement</string>
    <string name="move_and_fall"><![CDATA[Move & Fall]]></string>
    <string name="has_psd">Encryption</string>
    <string name="not_add_psd">Not encrypted</string>
    <string name="un_cut_off">Uncut</string>
    <string name="cut_off">Cut off</string>
    <string name="normal">Normal</string>
    <string name="fall_off">Fall off</string>
    <string name="suport_aoa_broadcast">Support AOA broadcast</string>
    <string name="sos_static"><![CDATA[Alarm & Quiet]]></string>
    <string name="sos_sport"><![CDATA[Alarm & Motion]]></string>
</resources>